force-app/main/default/objects/Journal_Entry__c/Journal_Entry__c.object-meta.xml
<CustomObject>
    <label>Journal Entry</label>
    <nameField>
        <displayFormat>JE-{000000000}</displayFormat>
        <label>Journal Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>