force-app/main/default/objects/Journal_Entry__c/fields/Amount_With_Sign__c.field-meta.xml
<CustomField>
    <fullName>Amount_With_Sign__c</fullName>
    <formula>Amount__c *  Customer_Sign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount With Sign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>