force-app/main/default/objects/Journal_Entry__c/fields/Applied_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Applied_Record_Id__c</fullName>
    <inlineHelpText>For payment part items, either an InvoiceItemId or a DebitMemoId to show what record the payment is applied to</inlineHelpText>
    <label>Applied Record Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>