force-app/main/default/objects/Journal_Entry__c/fields/Billing_Or_Collection__c.field-meta.xml
<CustomField>
    <fullName>Billing_Or_Collection__c</fullName>
    <formula>CASE( 
TEXT(Object_Type__c), 
&quot;InvoiceItem&quot;,&quot;Billing&quot;,
&quot;CreditMemo&quot;,&quot;Collection&quot;,
&quot;DebitMemo&quot;,&quot;Billing&quot;,
&quot;PaymentPart&quot;,&quot;Collection&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoices and Debit Memos = Billing
Credit Memos and Payments = Collection</inlineHelpText>
    <label>Billing Or Collection</label>
    <type>Text</type>
</CustomField>