force-app/main/default/objects/Journal_Entry__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client Unique Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>