force-app/main/default/objects/Journal_Entry__c/fields/Client_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Client_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal Entries</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>