force-app/main/default/objects/Journal_Entry__c/fields/Closed_Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>Closed_Accounting_Period__c</fullName>
    <formula>IF( Date__c &lt;= $Setup.Zuora_Custom_Setting__c.Last_Accounting_Period_Close_Date__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Period</label>
    <type>Checkbox</type>
</CustomField>