force-app/main/default/objects/Journal_Entry__c/fields/Credit_Memo_Unapplied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Unapplied_Amount__c</fullName>
    <inlineHelpText>The Credit Memo amount that is left as a balance to be applied to a future Invoice Item or Debit Memo</inlineHelpText>
    <label>Credit Memo Unapplied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>