force-app/main/default/objects/Journal_Entry__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Unique Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>