force-app/main/default/objects/Journal_Entry__c/fields/Customer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal Entries (Customer Account)</relationshipLabel>
    <relationshipName>Journal_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>