force-app/main/default/objects/Journal_Entry__c/fields/Customer_Sign__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sign__c</fullName>
    <formula>CASE(
Text(Object_Type__c), 
&quot;InvoiceItem&quot;,1,
&quot;CreditMemo&quot;,-1,
&quot;DebitMemo&quot;,1,
&quot;PaymentPart&quot;,-1,
1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Sign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>