force-app/main/default/objects/Journal_Entry__c/fields/Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account__c</fullName>
    <inlineHelpText>Either Gateway or Lockbox that a payment was accepted into</inlineHelpText>
    <label>Deposit Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>