force-app/main/default/objects/Journal_Entry__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <inlineHelpText>Intended for internal notes about manual updates</inlineHelpText>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>