force-app/main/default/objects/Journal_Entry__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>InvoiceItem</fullName>
                
                
                    <label>InvoiceItem</label>
                
                </value>
            
                <value>
                
                    <fullName>CreditMemo</fullName>
                
                
                    <label>CreditMemo</label>
                
                </value>
            
                <value>
                
                    <fullName>DebitMemo</fullName>
                
                
                    <label>DebitMemo</label>
                
                </value>
            
                <value>
                
                    <fullName>PaymentPart</fullName>
                
                
                    <label>PaymentPart</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>