force-app/main/default/objects/Journal_Entry__c/fields/Paid_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Paid_To_Client__c</fullName>
    <inlineHelpText>The client to whom payments were directed. Ie, the owner of the gateway or lockbox at the time of the payment</inlineHelpText>
    <label>Paid To Client</label>
    <length>200</length>
    <type>Text</type>
</CustomField>