force-app/main/default/objects/Journal_Entry__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <inlineHelpText>For payment parts, or for returned payments (debit memos), populated with the payment method</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>ACH</fullName>
                
                
                    <label>ACH</label>
                
                </value>
            
                <value>
                
                    <fullName>CreditCard</fullName>
                
                
                    <label>CreditCard</label>
                
                </value>
            
                <value>
                
                    <fullName>Check</fullName>
                
                
                    <label>Check</label>
                
                </value>
            
                <value>
                
                    <fullName>Cash</fullName>
                
                
                    <label>Cash</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>