force-app/main/default/objects/Journal_Entry__c/fields/Project_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Project_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Journal Entries</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>