force-app/main/default/objects/Journal_Entry__c/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <inlineHelpText>When we download data from Zuora, we use 5 different types of queries. Same as object type, but query for Payment Parts applied to Debit Memos and those applied to Invoices separately</inlineHelpText>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>InvoiceItem</fullName>
                
                
                    <label>InvoiceItem</label>
                
                </value>
            
                <value>
                
                    <fullName>CreditMemo</fullName>
                
                
                    <label>CreditMemo</label>
                
                </value>
            
                <value>
                
                    <fullName>DebitMemo</fullName>
                
                
                    <label>DebitMemo</label>
                
                </value>
            
                <value>
                
                    <fullName>PaymentPart_DM</fullName>
                
                
                    <label>PaymentPart_DM</label>
                
                </value>
            
                <value>
                
                    <fullName>PaymentPart_IV</fullName>
                
                
                    <label>PaymentPart_IV</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>