force-app/main/default/objects/Journal_Entry__c/fields/Ready_for_Production_Detail__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Production_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marked as true on insert, marked as false once production detail records are created</inlineHelpText>
    <label>Ready for Production Detail</label>
    <type>Checkbox</type>
</CustomField>