force-app/main/default/objects/Journal_Entry__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <inlineHelpText>Debit and Credit Memos Only, Equivalent to Adjustment Type in SF</inlineHelpText>
    <label>Reason Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>