force-app/main/default/objects/Journal_Entry__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <inlineHelpText>The Gateway Id or Check Number of the corresponding payment</inlineHelpText>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>