force-app/main/default/objects/Journal_Entry__c/fields/Returned_PaymentPart_Id__c.field-meta.xml
<CustomField>
    <fullName>Returned_PaymentPart_Id__c</fullName>
    <inlineHelpText>Set by the ZuoraGLService. Relateds a debit memo to a PaymentPartItem so the P2B process can create (-) Production Details to reduce Credits Paid for same Production period</inlineHelpText>
    <label>Returned Payment Part Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>