force-app/main/default/objects/Journal_Entry__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>IF(
ISPICKVAL(Object_Type__c, &quot;InvoiceItem&quot;),
&quot;Credits Billed&quot;,
IF(
ISPICKVAL(Object_Type__c, &quot;PaymentPart&quot;),
&quot;Customer Collections&quot;,
CASE(Reason_Code__c, 
&quot;Production&quot;,&quot;Credits Billed&quot;,
&quot;Refund&quot;,&quot;Customer Collections&quot;,
Reason_Code__c)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Charges, Customer Payment or Adjustment Type</inlineHelpText>
    <label>Segment</label>
    <type>Text</type>
</CustomField>